--- a/hw2/index.html
+++ b/hw2/index.html
@@ -98,7 +98,13 @@
 			</div>
 
 			<h3>Part 2: Bezier surfaces with separable 1D de Casteljau</h3>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Briefly explain how de Casteljau algorithm extends to Bezier surfaces and how you implemented it in order to evaluate Bezier surfaces.
+			de Casteljau algorithm extends to Bezier surfaces by first making bezier curves along one direction first such as along the x axis first and by doing it on some parameter u, we get 1 control point per bezier curve which results in n control point, 1 from each of the n bezier curves, we then run de Casteljau algorithm on these n points with a second parameter v in order to give us a bezier surface.
+			The way we implemented this was by first iterating through each of the n rows which had m control points each and running de Casteljau algorithm on these m points along the parameter u to end up with n curves and n points, and then using our second parameter v, we make a new bezier curve with the n points as control points and v as the parameter to describe a point on the Bezier surface.
+			<figure>
+				<img src="task2.PNG" alt="Teapot" style="width:50%" />
+				<figcaption>bez/teapot.bez</figcaption>
+			</figure>
 
 			<h2>Section II: Triangle Meshes and Half-Edge Data Structure</h2>
 
@@ -117,17 +123,6 @@
 			<h2>(Optional) Section III: Potential Extra Credit - Art Competition: Model something Creative</h2>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-			<h2>Additional Notes (please remove)</h2>
-			<ul>
-				<li>You can also add code if you'd like as so: <code>code code code</code></li>
-				<li>
-					If you'd like to add math equations,
-					<ul>
-						<li>You can write inline equations like so: \( a^2 + b^2 = c^2 \)</li>
-						<li>You can write display equations like so: \[ a^2 + b^2 = c^2 \]</li>
-					</ul>
-				</li>
-			</ul>
 		</div>
 	</body>
 </html>
